--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "config";
 @import 'menu';
 
+
 * {
     box-sizing: border-box;
 }
@@ -9,7 +10,7 @@
 body    {
     @include background;
     background: $primary-color;
-    color: #fff;
+    color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
     font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -52,12 +53,15 @@ h1, h2, h3 {
 
 main {
     padding: 4rem;
-    height: 100%;
+    //height: 100%;
+    min-height: calc(100vh - 60px);
 
     .icons  {
         margin-top: 1rem;
+        
 
         a {
+            color: set-text-color($primary-color);
 
             padding: 0.4rem;
             &:hover {
@@ -74,3 +78,89 @@ main {
         }
     }
 }
+
+//work/projects
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+
+    img {
+        width: 100%;
+        border: 3px set-text-color($primary-color) solid;
+
+        &:hover {
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut;
+        }
+    }
+}
+
+
+//contact page
+
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+
+    .text-secondary {
+        color: $secondary-color;
+    }
+
+    div {
+        font-size: 2rem;
+        border: 3px #fff solid;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include easeOut;
+
+        &:hover {
+            padding: 0.5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
+            span {
+                color: set-text-color($secondary-color);
+            }
+        }
+    }
+}
+
+//button styles
+
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+    &:hover {
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+}
+
+.btn-dark {
+    @extend .btn;
+    background: darken($primary-color, 50);
+    color: #fff;
+}
+
+.btn-light {
+    @extend .btn;
+    background: lighten($primary-color, 50);
+    color: #333;
+}
+
+#main-footer {
+    text-align: center;
+    padding: 1rem;
+    background: darken($primary-color, 10);
+    color: set-text-color($primary-color);
+    height: 60px;
+}
+
+@import "mobile";
